# LLM

./: .gitignore  .viminfo  Dockerfile  README.md  callbacks.py  docker-compose.yml  generator.py  main.py  multi_evaluate.py  optimizer.py  pyproject.toml
config/: ZeRO_1_act_check.json  ZeRO_2_act_check.json  ZeRO_3_act_check.json  dpo.yaml  ds.yaml  fsdp.yaml  fsdp1.yaml  fsdp2.yaml  generation_config.json  pre.yaml  sft.yaml
config/accelerator/: cp_zero3.yaml  fsdp2.yaml  zero3.yaml
config/deepspeed/: zero1.json  zero2.json
env/: .bashrc
run_scripts/: llm_pre.sh  llm_rea.sh  llm_sft.sh  pre.yaml  sft.yaml  tnt.yaml  tnt_dual.sh  tnt_p2s.sh  tnt_s2p.sh
scripts/: dpo.yaml  llm_train.sh  run_zero3_dpo.sh  run_zero3_sft.sh  watch-gpu.sh
src/: adepters.py  build_model.py  callbacks.py  data_preprocessor.py  main.py  metrics.py  optimization.py  preprocessor.py  processing_utils.py  train.py  trainer.py  wandb_file_uploader.py
src/dpo/: README.md  attention.py  main.py  preprocessor.py  trainer.py
src/grpo/: README.md  main.py  preprocessor.py  rewards.py  trainer.py
src/sft/: README.md  callbacks.py  main.py  metrics.py  optimization.py  preprocessor.py  train.py  trainer.py
