[project]
name = "llm-dev"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # 기본 도구
    "pip", "wheel", "setuptools", "debugpy", "pydevd",
    # 핵심 라이브러리
    "transformers", "accelerate", "datasets", "liger-kernel",
    "trl", "peft", "deepspeed", "lomo-optim", "apollo-torch",

    # 평가 / 실험
    "evaluate", "pytest", "openai",
    "lm-eval @ git+https://github.com/EleutherAI/lm-evaluation-harness.git@cab12a47fbc159334f9cb53ca046b7d65e8b43e0",

    # 양자화 / 최적화
    "bitsandbytes",

    # 데이터 / 유틸
    "scipy", "sentencepiece", "pillow", "natsort",

    # 서빙
    "fastapi", "uvicorn",

    # 수학
    "cmake", "latex2sympy2_extended", "math_verify",

    # 모니터링 / 로깅
    "setproctitle", "glances[gpu]", "wandb",

    # 기타
    "ruff", "koreanize_matplotlib",

    # torch (pytorch-cu128 인덱스에서)
    "torch", "torchvision", "torchaudio",

    # build isolation 비활성화 필요
    # "flash-attn",
]

[tool.uv]
# flash-attn 은 torch 가 설치된 상태에서 빌드해야 하므로 isolation 해제
# no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
torch       = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio  = { index = "pytorch-cu128" }

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true # 이 인덱스는 명시된 패키지에만 사용
